# kalshimula

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
config/: CLAUDE.md  station_rule_table.csv  stations.yaml
docs/: modeling-eval.md  night-ops.md
reports/: BOBBY_PRIVATE_AUDIT_BRIDGE.csv  BOBBY_PRIVATE_AUDIT_BRIDGE.md  COLD_BIAS_ROOT_CAUSE_2026-05-25.md  DEEP_RESEARCH_MARKET_EDGE_PROMPT.md  MAINLINE_AUDIT_2026-05-24.md  MAINLINE_AUDIT_2026-05-25.md  MAINLINE_BUG_AUDIT_2026-05-25.md  MODEL_AUDIT_2026-05-25_FINAL_PASS.md  OVERNIGHT_MAINLINE_REPORT.md  TOMORROW_MODEL_PACKET.csv  TOMORROW_MODEL_PACKET.md
scripts/: refresh_source_fixtures.py  run_morning_paper_ops.sh
src/: CLAUDE.md  backtest_cli.py  batch_collect_cli.py  bias_cli.py  bias_policy_cli.py  cache.py  climate_feature_diagnostics_cli.py  collect.py  collect_cli.py  config.py  daily_model_refresh_cli.py  daily_packet_check_cli.py  forward_test_actuals_check_cli.py  forward_test_actuals_template_cli.py  forward_test_gate_cli.py  forward_test_pending_cli.py  forward_test_report_cli.py  forward_test_settle_cli.py  guidance_diagnostics_cli.py  historical_runner.py  historical_runner_cli.py  interval_policy_cli.py  intervals_cli.py  model_gate_cli.py  model_policy_report_cli.py  model_report_cli.py  nbm_guidance_cli.py  nbm_probability_calibration_cli.py  nowcast_adjustment_cli.py  nowcast_calibration_audit_cli.py  nowcast_features_cli.py  nowcast_predictions_cli.py  nowcast_report_cli.py  nws_guidance_cli.py  predict.py  (+23 more)
(+226 files in other folders)
