[project]
name = "weather-predictor"
version = "0.1.0"
description = "Probabilistic daily-high-temp predictor for Kalshi weather markets."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
